eks-deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: packersmovers
  name: packersmovers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: packersmovers
  template:
    metadata:
      labels:
        app: packersmovers
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: my-packers-movers
        image: packersmovers/packer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: regcred    
# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: packersmovers
    k8s-app: packersmovers
  name: packersmovers
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  type: LoadBalancer
  selector:
    app: packersmovers
