eks-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "packersmovers"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: packersmovers
spec:
  rules:
    - http:
        paths:
          - path: /home/*
            backend:
              serviceName: "packersmovers"
              servicePort: 8081
